# shortly

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  compose.yml
src/: .dockerignore  .env.example  Dockerfile  celerybeat-schedule  pyproject.toml  requirements.txt  ruff.toml
src/apps/account/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
src/apps/account/dtos/: create_user_dto.py  login_result_dto.py  login_user_dto.py
src/apps/account/forms/: auth.py  profile.py
src/apps/account/migrations/: 0001_initial.py  0002_alter_userprofile_profile_picture.py  0002_userprofile.py  0003_delete_userprofile.py
src/apps/account/services/: create_user_service.py  image_processor_service.py  image_service.py  image_validator_service.py  login_user_service.py
src/apps/account/tests/: __init__.py  test_avatar_s3_flow.py  test_models.py  test_views.py
src/apps/account/views/: auth.py  avatar_redirect_view.py  profile.py  upload_avatar_view.py  user_delete_view.py  user_profile_update_view.py
src/apps/billing/: abstracts.py  admin.py  apps.py  context_processors.py  domain.py  dto.py  forms.py  models.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py  webhook.py
src/apps/billing/migrations/: 0001_initial.py  0002_initial.py  0002_rename_enable_custom_domains_plan_enable_conditional_redirect_and_more.py  0003_alter_wallettransaction_wallet_and_more.py  0003_rename_enable_advanced_stats_plan_advanced_stats_and_more.py  0004_plan_priority_support.py  0004_remove_wallettransaction_billing_wal_externa_5d3fa1_idx_and_more.py  0005_alter_wallettransaction_external_reference.py  0005_wallettransaction_external_reference.py  (+1 more)
src/apps/common/: apps.py  models.py  storage_backends.py  urls.py  utils.py  views.py
src/apps/converter/: admin.py  apps.py  enums.py  forms.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
src/apps/dashboard/: urls.py  views.py
src/apps/institutional/: apps.py  urls.py  views.py
src/apps/manager/: consumers.py  urls.py  views.py  ws_urls.py
src/apps/monitor/: apps.py  urls.py  views.py
src/apps/notification/: admin.py  mailers.py  models.py  signals.py  tasks.py
src/apps/security/: apps.py  middleware.py  services.py  signals.py
src/apps/toggler/: admin.py  apps.py  models.py  utilities.py
src/core/: asgi.py  celery.py  settings.py  urls.py
src/core/settings/: __init__.py  base.py  dev.py  prod.py
src/templates/shared/: aside.html  base.html  base_aside.html  header.html
src/tools/: cli.py
(+168 files in other folders)
