[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "django>=5.2.3",
    "django-debug-toolbar>=6.0.0",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "uuid6>=2025.0.0",
    "whitenoise>=6.9.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "apps*", "shortly*"]
exclude = ["locale*", "templates*", "static*", "logs*"]
