[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "boto3>=1.41.0",
    "botocore>=1.41.0",
    "celery>=5.5.3",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=5.2.3",
    "django-axes[ipware]>=8.0.0",
    "django-celery-beat>=2.8.1",
    "django-debug-toolbar>=6.0.0",
    "django-ratelimit>=4.1.0",
    "django-redis>=6.0.0",
    "django-widget-tweaks>=1.5.0",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "hashids>=1.3.1",
    "mercadopago>=2.3.0",
    "pre-commit>=4.4.0",
    "psutil>=7.2.1",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.1.0",
    "redis>=7.1.0",
    "ruff>=0.13.2",
    "uuid6>=2025.0.0",
    "whitenoise>=6.9.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "apps*", "shortly*"]
exclude = ["locale*", "templates*", "static*", "logs*"]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
